Fix logo alignment

--- a/scss/blocks/header.scss
+++ b/scss/blocks/header.scss
@@ -1,8 +1,10 @@
 .header {
     padding: 24px 0;
 
+
     &__wrapper {
         display: flex;
         justify-content: space-between;
+        align-items: center;
     }
 }
